:bug: fixing overflow dropdown filters

--- a/src/components/common/selector/Select.styles.scss
+++ b/src/components/common/selector/Select.styles.scss
@@ -34,16 +34,23 @@
         box-shadow: none;
       }
     }
+
+    &-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
+      .ant-select-selector {
+      border: solid 1px var(--grey-40);
+      box-shadow: none;
+    }
   }
 
   .ant-select-selector {
     border-radius: 0px;
     min-height: 38px;
-    font-size: rem(15px);
+    font-size: rem(16px);
     color: var(--grey);
-    font-weight: 500;
 
     .ant-select-selection-item {
+      font-weight: 500;
+      color: var(--grey);
       position: relative;
       align-items: center;
       display: flex;
@@ -70,12 +77,12 @@
       outline: 0;
       box-shadow: none;
     }
+  }
 
-    &__choice {
-      font-size: 15px;
-      font-weight: 500;
-      color: var(--grey);
-    }
+  .ant-select-single.ant-select-open .ant-select-selection-item {
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--grey);
   }
 
   .ant-select:not(.ant-select-disabled) .ant-select-selector {
@@ -114,6 +121,7 @@
 
   &__dropdown {
     &.ant-select-dropdown {
+      padding-top: 0px;
       border: solid 1px var(--light-grey);
       border-radius: 0;
       box-shadow: none;
