--- a/src/components/common/tableView/Table.styles.scss
+++ b/src/components/common/tableView/Table.styles.scss
@@ -89,7 +89,6 @@ $small-margin-top: 2.375rem;
 }
 
 .lsd-table__scrolling-container {
-  overflow: auto;
   height: 100%;
 }
 
